# Google-Drive-clone

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANUAL_TESTING_GUIDE.md  Makefile  README.md  makefile  manage.py  mcp_server.py  pyproject.toml  requirements.txt  schema.yml
.github/workflows/: ci.yml
apps/: __init__.py
apps/accounts/: api.py  auth.py  email.py  managers.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_agenttoken_restricted_collection.py  0002_alter_user_id.py  0003_agenttoken_can_auto_approve.py  (+3 more)
apps/artifacts/: __init__.py  admin.py  api.py  apps.py  chunking.py  models.py  schemas.py  services.py  wiki_links.py
apps/collections/: __init__.py  admin.py  api.py  apps.py  models.py  schemas.py
apps/common/: admin.py  mixins.py  models.py  permissions.py  realtime.py  response.py  security.py  serializers.py  tests.py  urls.py  views.py
apps/files/: admin.py  api.py  models.py  schemas.py  serializers.py  tests.py  tests_mcp.py  urls.py  utils.py  views.py
apps/folders/: api.py  apps.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
apps/mcp/: __init__.py  api.py  apps.py  tools.py
docs/: architecture.md  contributing.md  quickstart.md  tutorial.md
file_manager/: asgi.py  urls.py  wsgi.py
file_manager/settings/: base.py
google_drive_clone/: asgi.py  urls.py  wsgi.py
google_drive_clone/settings/: base.py
lore/: api.py  asgi.py  urls.py  wsgi.py
lore/settings/: base.py  dev.py
utils/: permissions.py
(+32 files in other folders)
