[project]
name = "lore"
version = "0.1.0"
requires-python = ">=3.12"
description = "A Django project using pure Ninja"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "lore"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "lore.settings.base"
